# esbuild-config

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
npm-release/: dprint.json  npm-release  package.json  pnpm-lock.yaml
npm/esbuild-config/: install.js  package.json
npm/esbuild-config-darwin-64/: README.md  package.json
npm/esbuild-config-linux-64/: package.json
npm/esbuild-config-linux-arm64/: README.md  package.json
npm/esbuild-config-windows-64/: README.md  package.json
src/: main.rs
src/lib/: args.rs  errors.rs  mod.rs  paths.rs
